[incubator-kie-issues#1370] WIP. TODO: fix score logic - corner cases not covered. Issues with singleton list of null element